Refactor de packages. Modificaciones visuales en la actividad maps y settings, ahora se usa marker azul con indicador de direccion, se tiene un desplazamiento mas fluido, se guarda y restaura el estado del polyline cuando la actividad es destruida para no perder el recorrido del repartidor en la app.